# openkeeb

./: .gitignore  LEGAL.md  LICENSE  README.md  build_offline_mirror.py  pyproject.toml  run_offline.sh  serve_offline.py
.github/workflows/: ci.yml
docs/: history.md
offline-site/: README.md
offline_mirror/: __init__.py  __main__.py
scripts/: run_offline.sh
src/offline_mirror/: __init__.py  __main__.py  cli.py  constants.py  crawl.py  optimize.py  patches.py  server.py  theme_assets.py
src/offline_mirror/assets/: offline-runtime-guard.js  theme-init.js  theme-overrides.css  theme-runtime-adapter.js  theme-switcher.js
src/reverse_zap68_offline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_crawl.py  test_optimize.py  test_patches.py
